@startuml classes
set namespaceSeparator none
class "Simple_HUD" as Aux_Hud.Simple_HUD {
  aux_params
  aw_class_label
  aw_class_stat
  aw_class_table_mw
  aw_class_window
  bgcolor
  fgcolor
  font
  game_params
  max
  ncols
  nrows
  opacity
  poker_game
  popups
  site_params
  stats
  table_mw
  tips
  xpad
  xshift
  ypad
  yshift
  create_common(x, y)
  create_contents(container, i)
  move_windows()
  save_layout()
  update_contents(container, i)
}
class "Simple_Stat_Window" as Aux_Hud.Simple_Stat_Window {
  grid
  popup_count : int
  stat_box
  button_release_right(event)
  create_contents(i)
  update_contents(i)
}
class "Simple_label" as Aux_Hud.Simple_label {
}
class "Simple_stat" as Aux_Hud.Simple_stat {
  hud
  lab
  number
  stat
  stat_dict : NoneType
  widget
  set_color(fg, bg)
  update(player_id, stat_dict)
}
class "Simple_table_mw" as Aux_Hud.Simple_table_mw {
  aw : NoneType
  hud
  menu_is_popped : bool
  menu_label : str
  button_press_right(event)
  move_windows()
}
class "Simple_table_popup_menu" as Aux_Hud.Simple_table_popup_menu {
  h_hud_days_spinner
  h_nums_high_spinner
  h_nums_low_spinner
  hud_days_spinner
  nums_high_spinner
  nums_low_spinner
  parentwin
  build_button(labeltext, cbkeyword)
  build_combo_and_set_active(field, combo_dict)
  build_spinner(field, low, high)
  callback(checkState, data)
  change_combo_field_value(sel, field, combo_dict)
  change_spin_field_value(value, field)
  delete_event()
  set_spinners_active()
}
Aux_Hud.Simple_Stat_Window --* Aux_Hud.Simple_HUD : aw_class_window
Aux_Hud.Simple_label --* Aux_Hud.Simple_HUD : aw_class_label
Aux_Hud.Simple_stat --* Aux_Hud.Simple_HUD : aw_class_stat
Aux_Hud.Simple_table_mw --* Aux_Hud.Simple_HUD : aw_class_table_mw
Aux_Hud.Simple_table_mw --* Aux_Hud.Simple_HUD : table_mw
@enduml
